samples/_failures_safe/1761649003_63ba13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90049d67.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_90049d67.c:161:9: error: expected declaration or statement at end of input
  161 |         *column += (int)strlen(token->value);
      |         ^
./samples/SAFE/__tmp_90049d67.c:161:9: error: expected declaration or statement at end of input
